<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/choco"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:theme="@style/Theme.CoffeeNutrition">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="48dp"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:contentDescription="@string/back_button"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_back"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/tv_heading"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:text="@string/about_me"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="28sp" />

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="25dp"
                    android:background="@null"
                    android:contentDescription="@string/empty_space"
                    android:src="@null"
                    app:tint="@color/white" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/tv_detail_photo"
                android:src="@drawable/profile_picture"
                android:layout_gravity="center"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                app:civ_border_width="4dp"
                app:civ_border_color="@color/black"
                />
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_marginBottom="8dp"
                android:text="@string/about_name"
                />
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="center"
                android:text="@string/about_email"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>